--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,14 +33,23 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ GhGuestbookBundle  ]
     #java: /usr/bin/java
     filters:
+        less:
+            node: /usr/bin/node
+            node_paths: [/opt/lessc/lib, /usr/lib/node_modules]
+            apply_to: "\.less$"
         cssrewrite: ~
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
         #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        yui_css:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor.jar"
+            apply_to: "\.css$"
+        yui_js:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor.jar"
 
 # Doctrine Configuration
 doctrine:
@@ -67,3 +76,13 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+
+
+braincrafted_bootstrap:
+    less_filter: less
+    jquery_path: %kernel.root_dir%/../vendor/components/jquery/jquery.js
+
+
+parameters:
+    gh_guestbook.messages_per_page: 10
