--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
         "twbs/bootstrap": "v3.0.0",
         "components/jquery": "1.10.2",
         "knplabs/knp-paginator-bundle": "~2.3@dev",
-        "knplabs/knp-components": "~1.2@dev"
+        "knplabs/knp-components": "~1.2@dev",
+        "doctrine/mongodb-odm": "1.0.*@dev",
+        "doctrine/mongodb-odm-bundle": "3.0.*@dev",
+        "stof/doctrine-extensions-bundle": "~1.1@dev",
+        "knplabs/knp-menu-bundle":"dev-master"
     },
     "scripts": {
         "post-install-cmd": [
