Added FOSUser bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: "%locale%" }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -103,3 +103,8 @@ stof_doctrine_extensions:
         default:
             timestampable: true
             sluggable: true
+
+fos_user:
+    db_driver: mongodb
+    firewall_name: main
+    user_class: Gh\BlogBundle\Document\User
